squirrel_lang/src/snapshots/squirrel_lang__lexer__tests__lexer-edge_cases-default_args.nut.snap
---
source: squirrel_lang/src/lexer.rs
expression: Lexer test for edge_cases/default_args.nut
---
- Identifier: a
- NewSlot
- Integer: 0
- Newline
- Newline
- Function
- Identifier: inc_a
- LeftParenthesis
- RightParenthesis
- LeftCurlyBrace
- Newline
- Identifier: a
- Assign
- Identifier: a
- Plus
- Integer: 1
- Newline
- Return
- Identifier: a
- Newline
- RightCurlyBrace
- Newline
- Newline
- Function
- Identifier: rerun_test
- LeftParenthesis
- Identifier: a_arg
- Assign
- Identifier: inc_a
- LeftParenthesis
- RightParenthesis
- RightParenthesis
- LeftCurlyBrace
- Newline
- DoubleColon
- Identifier: print
- LeftParenthesis
- Identifier: a_arg
- Plus
- String: "\n"
- RightParenthesis
- Newline
- RightCurlyBrace
- Newline
- Newline
- Identifier: rerun_test
- LeftParenthesis
- RightParenthesis
- Newline
- Identifier: rerun_test
- LeftParenthesis
- RightParenthesis
- Newline
- Identifier: rerun_test
- LeftParenthesis
- RightParenthesis
- Newline
- Newline
- Identifier: tab
- NewSlot
- LeftCurlyBrace
- Identifier: val
- Assign
- Integer: 0
- RightCurlyBrace
- Newline
- Newline
- Function
- Identifier: mut_test
- LeftParenthesis
- Identifier: b_arg
- Assign
- Identifier: tab
- RightParenthesis
- LeftCurlyBrace
- Newline
- Identifier: b_arg
- Period
- Identifier: val
- Assign
- Identifier: b_arg
- Period
- Identifier: val
- Plus
- Integer: 1
- Newline
- DoubleColon
- Identifier: print
- LeftParenthesis
- Identifier: b_arg
- Period
- Identifier: val
- Plus
- String: "\n"
- RightParenthesis
- Newline
- RightCurlyBrace
- Newline
- Newline
- Identifier: mut_test
- LeftParenthesis
- RightParenthesis
- Newline
- Identifier: mut_test
- LeftParenthesis
- RightParenthesis
- Newline
- Identifier: mut_test
- LeftParenthesis
- RightParenthesis
- Newline
- Newline
- Newline
- Return
- Integer: 0
