squirrel_lang/src/snapshots/squirrel_lang__lexer__tests__lexer-edge_cases-freed_locals.nut.snap
---
source: squirrel_lang/src/lexer.rs
expression: Lexer test for edge_cases/freed_locals.nut
---
- Local
- Identifier: a
- Assign
- Integer: 0
- Newline
- Newline
- Function
- Identifier: ref_a
- LeftParenthesis
- RightParenthesis
- LeftCurlyBrace
- Newline
- DoubleColon
- Identifier: print
- LeftParenthesis
- Identifier: a
- Plus
- String: "\n"
- RightParenthesis
- Newline
- Identifier: a
- Assign
- Identifier: a
- Plus
- Integer: 1
- Newline
- RightCurlyBrace
- Newline
- Newline
- Identifier: ref_a
- LeftParenthesis
- RightParenthesis
- Newline
- Identifier: ref_a
- LeftParenthesis
- RightParenthesis
- Newline
- Identifier: a
- PlusAssign
- Integer: 1
- Newline
- Identifier: ref_a
- LeftParenthesis
- RightParenthesis
- Newline
- DoubleColon
- Identifier: print
- LeftParenthesis
- Identifier: a
- Plus
- String: "\n"
- RightParenthesis
- Newline
- Newline
- Function
- Identifier: dec_b
- LeftParenthesis
- RightParenthesis
- LeftCurlyBrace
- Newline
- Local
- Identifier: b
- Assign
- String: I am b
- Newline
- Function
- Identifier: ref_b
- LeftParenthesis
- RightParenthesis
- LeftCurlyBrace
- Newline
- DoubleColon
- Identifier: print
- LeftParenthesis
- Identifier: b
- Plus
- String: "\n"
- RightParenthesis
- Newline
- RightCurlyBrace
- Newline
- Newline
- Return
- Identifier: ref_b
- Newline
- RightCurlyBrace
- Newline
- Newline
- Local
- Identifier: my_ref_b
- Assign
- Identifier: dec_b
- LeftParenthesis
- RightParenthesis
- Newline
- Newline
- Identifier: my_ref_b
- LeftParenthesis
- RightParenthesis
- Newline
- Newline
- Local
- Identifier: outer_ref_c
- Newline
- Newline
- ForEach
- LeftParenthesis
- Identifier: i
- In
- LeftSquareBracket
- Integer: 0
- Comma
- Integer: 1
- RightSquareBracket
- RightParenthesis
- LeftCurlyBrace
- Newline
- Local
- Identifier: c
- Assign
- String: I am c
- Newline
- Identifier: outer_ref_c
- Assign
- Function
- LeftParenthesis
- RightParenthesis
- LeftCurlyBrace
- Newline
- DoubleColon
- Identifier: print
- LeftParenthesis
- Identifier: c
- Plus
- String: "\n"
- RightParenthesis
- Newline
- RightCurlyBrace
- Newline
- RightCurlyBrace
- Newline
- Newline
- Identifier: outer_ref_c
- LeftParenthesis
- RightParenthesis
- Newline
- Newline
- Newline
- Newline
- Newline
- ForEach
- LeftParenthesis
- Identifier: i
- In
- LeftSquareBracket
- Integer: 0
- RightSquareBracket
- RightParenthesis
- Local
- Identifier: d
- Assign
- String: I am d
- Newline
- Newline
- Newline
- Newline
- Newline
- LeftCurlyBrace
- Newline
- Local
- Identifier: e
- Assign
- String: I am e
- Newline
- RightCurlyBrace
- Newline
- Newline
- Newline
