squirrel_lang/src/snapshots/squirrel_lang__lexer__tests__lexer-edge_cases-lost_env.nut.snap
---
source: squirrel_lang/src/lexer.rs
expression: Lexer test for edge_cases/lost_env.nut
---
- Identifier: env
- NewSlot
- LeftCurlyBrace
- Newline
- Identifier: field
- Assign
- String: I am ENV
- Newline
- RightCurlyBrace
- Newline
- Newline
- Function
- Identifier: array_tostring
- LeftParenthesis
- Identifier: arr
- RightParenthesis
- LeftCurlyBrace
- Newline
- Local
- Identifier: str
- Assign
- String: "["
- Newline
- ForEach
- LeftParenthesis
- Identifier: idx
- Comma
- Identifier: val
- In
- Identifier: arr
- RightParenthesis
- LeftCurlyBrace
- Newline
- Identifier: str
- Assign
- Identifier: str
- Plus
- Identifier: val
- Newline
- If
- LeftParenthesis
- Identifier: idx
- LessThan
- Identifier: arr
- Period
- Identifier: len
- LeftParenthesis
- RightParenthesis
- Minus
- Integer: 1
- RightParenthesis
- LeftCurlyBrace
- Newline
- Identifier: str
- Assign
- Identifier: str
- Plus
- String: ", "
- Newline
- RightCurlyBrace
- Newline
- RightCurlyBrace
- Newline
- Return
- Identifier: str
- Plus
- String: "]"
- Newline
- RightCurlyBrace
- Newline
- Newline
- Function
- Identifier: going_to_lose
- LeftParenthesis
- RightParenthesis
- LeftCurlyBrace
- Newline
- DoubleColon
- Identifier: print
- LeftParenthesis
- This
- Plus
- String: "\n"
- RightParenthesis
- Newline
- If
- LeftParenthesis
- This
- Equals
- "Null"
- RightParenthesis
- LeftCurlyBrace
- Newline
- DoubleColon
- Identifier: print
- LeftParenthesis
- String: "I am null\n"
- RightParenthesis
- Newline
- RightCurlyBrace
- Else
- LeftCurlyBrace
- Newline
- DoubleColon
- Identifier: print
- LeftParenthesis
- String: "I am not null\n"
- RightParenthesis
- Newline
- This
- Period
- Identifier: field
- NewSlot
- String: I am new
- Newline
- RightCurlyBrace
- Newline
- Return
- This
- Newline
- RightCurlyBrace
- Newline
- Newline
- RawCall
- LeftParenthesis
- Identifier: going_to_lose
- Comma
- Identifier: env
- RightParenthesis
- Newline
- DoubleColon
- Identifier: print
- LeftParenthesis
- Identifier: array_tostring
- LeftParenthesis
- Identifier: env
- Period
- Identifier: keys
- LeftParenthesis
- RightParenthesis
- RightParenthesis
- Plus
- String: "\n"
- RightParenthesis
- Newline
- RawCall
- LeftParenthesis
- Identifier: going_to_lose
- Comma
- "Null"
- RightParenthesis
